<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory</string>

    <!-- Title text for the empty view, which describes the empty inventary [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">The inventary is empty</string>

    <!-- Subtitle text for the empty view that prompts the user to add a tool [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a tool</string>

    <!-- Label for overflow menu option that inserts fake tool data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all tool data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Tools</string>

    <!-- Label for editor menu option to save tool and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current tool [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for editor overflow menu option that allow to modify current tool [CHAR LIMIT=20] -->
    <string name="action_modify">Modify</string>

    <!-- Title for the activity to add a new tool [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_tool">Add a Tool</string>

    <!-- Title for the activity to edit an existing tool [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_tool">Edit Tool</string>

    <!-- Title for the activity to see the details of an existing tool [CHAR LIMIT=20] -->
    <string name="detail_activity_title_tool">Details Tool</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_tool_name">Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_tool_price">Price</string>

    <!-- Text hint for currency in the details [CHAR LIMIT=30] -->
    <string name="hint_tool_currency">$</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_tool_quantity">Quantity</string>

    <!-- Label for supplier information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_tool_supplier_name">Supplier Name</string>

    <!-- Text hint for supplier phone number field in the editor [CHAR LIMIT=30] -->
    <string name="hint_tool_supplier_number">Supplier Phone Number</string>

    <!-- Toast message in editor when new tool has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_tool_successful">Tool saved</string>

    <!-- Toast message in editor when new tool has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_tool_failed">Error with saving Tool</string>

    <!-- Toast message in editor when tool has been successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_tool_failed">Tool saved</string>

    <!-- Toast message in editor when tool has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_tool_successful">Error with saving tool</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current tool [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current tool [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this tool?</string>

    <!-- Dialog button text for the option to confirm deleting the current tool [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current tool [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current tool was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_tool_successful">Tool deleted</string>

    <!-- Toast message in editor when current tool has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_tool_failed">Error with deleting tool</string>

    <!-- Label for sale button [CHAR LIMIT=30] -->
    <string name="sale">Sale</string>

</resources>
